# datanommer

./: .bandit.cfg  .flake8  .gitignore  .gitleaks.toml  .mergify.yml  .pre-commit-config.yaml  .travis-dev-setup.sh  .travis-runtests.sh  .travis.yml  MANIFEST.in  README.md  README.rst  Vagrantfile  alembic.ini  pyproject.toml  runtests.sh  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: dependabot-approve.yml  pre-commit-autoupdate.yml  tests.yml
.s2i/: datanommer-upgrade-db.sh  environment  run-datanommer.sh
alembic/versions/: 198447250956_one_model.py  19bb834d6f9_add_users_composite_pkey.py  1d4feffd78fe_add_historic_user_an.py  310c88783271_fill_in_old_source_c.py  5091535d0fb4_category_not_null.py  5a167589eb8e_add_category_index.py  999b2d10b4e_add_topic_index.py  a356c9a10463_store_headers.py  a4f74590bcf_determine_category.py
datanommer/: consumer.py  models.py
datanommer.commands/: NEWS.rst  README.rst  config.toml.example  pyproject.toml  setup.py  test-requirements.txt  tox.ini
datanommer.commands/datanommer/commands/: .__init__.py.swo  __init__.py  extract_users.py  populate_json.py  utils.py
datanommer.commands/news/: C320a466.feature  Cac7394e.feature  PR815.feature  PR890.dependency
datanommer.commands/tests/: conftest.py  test_commands.py  test_extract_users.py  test_populate_json.py  utils.py
datanommer.consumer/: MANIFEST.in  NEWS.rst  README.rst  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
datanommer.consumer/datanommer/consumer/: __init__.py
datanommer.consumer/fedmsg.d/: base.py  datanommer.py  logging.py
datanommer.consumer/news/: .gitignore  4f7ffaa.dev
datanommer.consumer/tests/: __init__.py  conftest.py  test_consumer.py
datanommer.consumer/tools/: fake-bus.py
datanommer.models/: MANIFEST.in  NEWS.rst  README.rst  alembic.ini  example-config.py  pyproject.toml  requirements.txt  setup.py  tox.ini
datanommer.models/alembic/: env.py
datanommer.models/alembic/versions/: 143ec484f5ba_add_uuid_column.py  198447250956_one_model.py  19bb834d6f9_add_users_composite_pkey.py  1b786d5fc66_add_packages_composite_pkey.py  1d4feffd78fe_add_historic_user_an.py  24fc1373d76e_add_usernames_and_pa.py  2affa1daa804_fix_git_topics.py  310c88783271_fill_in_old_source_c.py  4391ce7dc184_add_source_columns.py  5091535d0fb4_category_not_null.py  57be773be52b_index_category_and_topic.py  5a167589eb8e_add_category_index.py  5db25abc63be_init.py  6c58cdb04760_add_username_and_crypto_fields.py  951c40020acc_unique.py  999b2d10b4e_add_topic_index.py  a356c9a10463_store_headers.py  a4f74590bcf_determine_category.py  ae2801c4cd9_add_category_column.py
datanommer.models/datanommer/: __init__.py
datanommer.models/datanommer/models/: .__init__.py.swo  __init__.py
datanommer.models/datanommer/models/alembic/versions/: 0ce25211a227_message_msg_raw.py  429e6f2cba6f_message_agent_name.py  f6918385051f_messages_headers_index.py  f6d590f5c53f_message_msg_json.py
datanommer.models/datanommer/models/testing/: __init__.py
datanommer.models/fedmsg.d/: base.py  example-datanommer.py
datanommer.models/news/: +get_first.bug  +get_first.feature  +headers-index.feature  +no_total.bug  +schema-packages.feature  1257.dependency  1309.feature  C2631885.docs  C610067f.other  C981e2a4.feature  PR1312.feature  PR437.bug  PR483.feature  PR815.feature
datanommer.models/tests/: test_jsonencodeddict.py  test_model.py
devel/ansible/: datanommer.yml
devel/ansible/roles/datanommer/files/: .bashrc  datanommer.service
devel/ansible/roles/datanommer/tasks/: main.yml
devel/ansible/roles/datanommer/templates/: fedora-messaging.toml.j2
devel/ansible/roles/postgresql/tasks/: main.yml
docs/: conf.py  contributing.rst  datanommer.commands.NEWS.rst  datanommer.consumer.NEWS.rst  datanommer.models.NEWS.rst  index.rst  requirements.txt  sysadmin.rst  user.rst
fedmsg.d/: base.py  datanommer.py  endpoints.py
tests/: test_model.py
tools/: active-contrib.py  check-dep-versions.py  datanommer-dump.py  datanommer-stats.py  install-models-as-editable.sh  nommer-create-db.py  run-liccheck.sh
tools/activity-dot-chart/: make-radar-chart.py  make-user-chart.py
tools/first-week-of-datanommer/: README  activity.txt  dumptotstamps.py  plot-conf.cnf  timestamps.txt  tstamptobuckets.py
tools/gource/: datanommer2gitlog.py
tools/timescaledb/: migrate-to-timescaledb.py  migrate.toml
tools/towncrier/: get-authors.py  run-towncrier.sh  template.rst.j2
