[tool.poetry]
name = "datanommer.models"
version = "0.9.1"
description = "SQLAlchemy models for datanommer"
authors = [
  "Fedora Infrastructure <admin@fedoraproject.org>"
]
license = "GPL-3.0-or-later"
readme = "README.rst"
repository = "https://github.com/fedora-infra/datanommer"
homepage = "https://github.com/fedora-infra/datanommer"
packages = [
    { include = "datanommer" },
]
include = [
    "fedmsg.d/*",
    "tests/*",
    "tox.ini",
]

[tool.poetry.dependencies]
python = "^3.6.2"
fedmsg = "^1.1.2"
SQLAlchemy = ">=1.0.9"
alembic = "^1.6.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
black = "^21.6b0"
isort = "^5.9.2"
flake8 = "^3.9.2"
pytest = "^6.2.4"
fedmsg-meta-fedora-infrastructure = "^0.31.0"
liccheck = "^0.6.0"
pytest-cov = "^2.12.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.liccheck]
authorized_licenses = [
  "bsd",
  "new bsd",
  "simplified bsd",
  "apache",
  "apache 2.0",
  "apache software",
  "Apache License 2.0",
  "Apache License, Version 2.0",
  "gnu lgpl",
  "gpl v2",
  "GNU General Public License v2 or later (GPLv2+)",
  "GNU General Public License v3 (GPLv3)",
  "GNU General Public License v3 or later (GPLv3+)",
  "GNU Library or Lesser General Public License (LGPL)",
  "GNU Lesser General Public License v2 or later (LGPLv2+)",
  "GNU Lesser General Public License v3 or later (LGPLv3+)",
  "GPLv3+",
  "LGPLv2+",
  "gpl v3",
  "lgpl with exceptions or zpl",
  "isc",
  "isc license (iscl)",
  "mit",
  "python software foundation",
  "zpl 2.1",
  "mpl-2.0",
  "MPL 2.0",
  "Mozilla Public License 2.0 (MPL 2.0)",
  "lgpl",
  "CC0 (copyright waived)",
  "Public Domain",
  "Public Domain <http://unlicense.org>",
]
