[tool.poetry]
name = "datanommer.models"
version = "1.0.0-alpha.3"
description = "SQLAlchemy models for datanommer"
authors = [
  "Fedora Infrastructure <admin@fedoraproject.org>"
]
license = "GPL-3.0-or-later"
readme = "README.rst"
repository = "https://github.com/fedora-infra/datanommer"
homepage = "https://github.com/fedora-infra/datanommer"
packages = [
    { include = "datanommer" },
]
include = [
    "tests/*",
    "tox.ini",
]

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = ">=1.0.9,<1.4.23"
alembic = "^1.6.5"
psycopg2 = "^2.9.1"
fedora-messaging = "^2.1.0"
anitya-schema = {version = "*", optional = true}
fedora-messaging-the-new-hotness-schema = {version = "*", optional = true}
bodhi-messages = {version = "*", optional = true}
fedocal-messages = {version = "*", optional = true}
fedora-planet-messages = {version = "*", optional = true}
noggin-messages = {version = "*", optional = true}
fedorainfra-ansible-messages = {version = "*", optional = true}
nuancier-messages = {version = "*", optional = true}
discourse2fedmsg-messages = {version = "*", optional = true}
copr-messaging = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
black = "^21.6b0"
isort = "^5.9.2"
flake8 = "^3.9.2"
pytest = "^6.2.4"
liccheck = "^0.6.0"
pytest-cov = "^2.12.1"
pytest-postgresql = "^3.1.1"
pytest-mock = "^3.6.1"
bodhi-messages = "^5.5"
towncrier = "^21.3.0"

[tool.poetry.extras]
schemas = [
  "anitya-schema",
  "fedora-messaging-the-new-hotness-schema",
  "bodhi-messages",
  "fedocal-messages",
  "fedora-planet-messages",
  "noggin-messages",
  "fedorainfra-ansible-messages",
  "nuancier-messages",
  "discourse2fedmsg-messages",
  "copr-messaging",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.liccheck]
authorized_licenses = [
  "bsd",
  "new bsd",
  "simplified bsd",
  "apache",
  "apache 2.0",
  "apache software",
  "Apache License 2.0",
  "Apache License, Version 2.0",
  "gnu lgpl",
  "gpl v2",
  "GNU General Public License v2 or later (GPLv2+)",
  "GNU General Public License v3 (GPLv3)",
  "GNU General Public License v3 or later (GPLv3+)",
  "GNU Library or Lesser General Public License (LGPL)",
  "GNU Lesser General Public License v2 or later (LGPLv2+)",
  "GNU Lesser General Public License v3 or later (LGPLv3+)",
  "GPLv3+",
  "LGPLv2+",
  "gpl v3",
  "lgpl with exceptions or zpl",
  "isc",
  "isc license (iscl)",
  "mit",
  "python software foundation",
  "zpl 2.1",
  "mpl-2.0",
  "MPL 2.0",
  "Mozilla Public License 2.0 (MPL 2.0)",
  "lgpl",
  "CC0 (copyright waived)",
  "Public Domain",
  "Public Domain <http://unlicense.org>",
  "Zope Public",
]


[tool.towncrier]
package = "datanommer.models"
directory = "news/"
title_format = "v{version}"
issue_format = "{issue}"
template = "../tools/towncrier/template.rst.j2"
underlines = "=^-"
wrap = true
all_bullets = true

  [[tool.towncrier.type]]
  directory = "bic"
  name = "Backwards Incompatible Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "dependency"
  name = "Dependency Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bug"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "dev"
  name = "Development Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "docs"
  name = "Documentation Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "other"
  name = "Other Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "author"
  name = "Contributors"
  showcontent = true
