[tool.poetry]
name = "datanommer.models"
version = "1.4.0"
description = "SQLAlchemy models for datanommer"
authors = [
  "Fedora Infrastructure <admin@fedoraproject.org>"
]
license = "GPL-3.0-or-later"
readme = "README.rst"
repository = "https://github.com/fedora-infra/datanommer"
homepage = "https://github.com/fedora-infra/datanommer"
packages = [
    { include = "datanommer/models" },
    { include = "datanommer/models/testing"},
    { include = "datanommer/models/alembic" },
]
include = [
    { path = "*.ini", format = "sdist" },
    { path = "*.txt", format = "sdist" },
    { path = "*.cfg", format = "sdist" },
    { path = "*.rst", format = "sdist" },
    { path = "*.xml", format = "sdist" },
    { path = "tests/*", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.3.24 || ^2.0.0"
alembic = "^1.6.5"
psycopg2 = "^2.9.1"
fedora-messaging = ">=2.1.0"

# Message schemas. The reference list of all message schemas is in
# https://github.com/fedora-infra/fedora-messaging/blob/develop/docs/schema-packages.txt
anitya-schema = {version = "*", optional = true}
bodhi-messages = {version = "*", optional = true}
bugzilla2fedmsg-schema = {version = "*", optional = true}
ci-messages = {version = "*", optional = true}
copr-messaging = {version = "*", optional = true}
discourse2fedmsg-messages = {version = "*", optional = true}
fedocal-messages = {version = "*", optional = true}
fedorainfra-ansible-messages = {version = "*", optional = true}
fedora-elections-messages = {version = "*", optional = true}
fedora-messaging-git-hook-messages = {version = "*", optional = true}
fedora-messaging-the-new-hotness-schema = {version = "*", optional = true}
fedora-planet-messages = {version = "*", optional = true}
fmn-messages = {version = "*", optional = true}
kerneltest-messages = {version = "^1.0.0", optional = true}
koji-fedoramessaging-messages = {version = "^1.2.2", optional = true}
koschei-messages = {version = "*", optional = true}
maubot-fedora-messages = {version = "*", optional = true}
mediawiki-messages = {version = "*", optional = true}
meetbot-messages = {version = "*", optional = true}
mdapi-messages = {version = "*", optional = true}
noggin-messages = {version = "*", optional = true}
nuancier-messages = {version = "*", optional = true}
pagure-messages = {version = "*", optional = true}
tahrir-messages = {version = "*", optional = true}

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
black = "*"
ruff = "*"
pytest = "*"
liccheck = "*"
pytest-cov = "*"
pytest-postgresql = "*"
pytest-mock = "*"
bodhi-messages = "*"
towncrier = "*"

[tool.poetry.extras]
schemas = [
  "anitya-schema",
  "bodhi-messages",
  "bugzilla2fedmsg-schema",
  "ci-messages",
  "copr-messaging",
  "discourse2fedmsg-messages",
  "fedocal-messages",
  "fedorainfra-ansible-messages",
  "fedora-elections-messages",
  "fedora-messaging-git-hook-messages",
  "fedora-messaging-the-new-hotness-schema",
  "fedora-planet-messages",
  "fmn-messages",
  "kerneltest-messages",
  "koji-fedoramessaging-messages",
  "koschei-messages",
  "maubot-fedora-messages",
  "mediawiki-messages",
  "meetbot-messages",
  "mdapi-messages",
  "noggin-messages",
  "nuancier-messages",
  "pagure-messages",
  "tahrir-messages",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.towncrier]
package = "datanommer.models"
directory = "news/"
title_format = "v{version}"
issue_format = "{issue}"
template = "../tools/towncrier/template.rst.j2"
underlines = "=^-"
wrap = false
all_bullets = true

  [[tool.towncrier.type]]
  directory = "bic"
  name = "Backwards Incompatible Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "dependency"
  name = "Dependency Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bug"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "dev"
  name = "Development Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "docs"
  name = "Documentation Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "other"
  name = "Other Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "author"
  name = "Contributors"
  showcontent = true
